...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- User Profile Picture -->
        <TextView
            android:id="@+id/publicProfileUserRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No rating"
            app:layout_constraintBottom_toBottomOf="@+id/public_profile_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/public_profile_username"
...
                android:paddingHorizontal="12dp"
                android:text="Report"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/public_profile_rate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:backgroundTint="@color/sky_blue"
                android:drawableRight="@drawable/ic_star"
                android:drawableTint="@color/white"
...
