...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <fragment
        android:id="@+id/nav_host_fragment_activity_base"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.99"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation" />
...
